# text2path

./: Cargo.toml  README.md
example/: pdfpath.rs  svgpath.rs
src/: lib.rs  path.rs
